macros/tests/ui/multipart_invalid_limit.rs
use axum_typed_multipart::TryFromMultipart;

#[derive(TryFromMultipart)]
struct Data {
    #[form_data(limit = "invalid")]
    field: String,
}

fn main() {}
